--- a/web/src/app/pages/Main/Main.scss
+++ b/web/src/app/pages/Main/Main.scss
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	width: 100%;
+	height: 100%;
 	&__wrapper {
 		display: flex;
 		flex-direction: row;
