--- a/web/src/app/components/Burger/Burger.scss
+++ b/web/src/app/components/Burger/Burger.scss
@@ -15,10 +15,44 @@
 		z-index: 100;
 		overflow: hidden;
 		cursor: pointer;
+		&:hover {
+			background: rgba($color: #000000, $alpha: 0.2);
+		}
 	}
 	&__main {
 		z-index: 1000;
-		background-color: #f0feff;
+
+		&-light {
+			background-color: var(--Light-bg-white);
+			font-size: 30px;
+			ul {
+				li {
+					a {
+						color: var(--Light-font-color);
+						text-decoration: none;
+					}
+					&:hover {
+						background-color: var(--Light-bg-white-hover);
+					}
+				}
+			}
+		}
+		&-dark {
+			background-color: var(--Dark-bg-dark);
+			font-size: 30px;
+			ul {
+				li {
+					a {
+						color: var(--Dark-font-color);
+						text-decoration: none;
+					}
+					&:hover {
+						background-color: var(--Dark-bg-dark-hover);
+					}
+				}
+			}
+		}
+		background-color: var(--Dark-bg-dark);
 		height: 100%;
 		width: 70%;
 		display: flex;
@@ -26,9 +60,16 @@
 		justify-content: start;
 		align-items: start;
 		padding: 30px 20px;
+		font-size: 30px;
 		ul {
+			width: 100%;
 			li {
-				font-size: 30px;
+				a {
+					display: block;
+					width: 100%;
+					padding: 4px 10px;
+					cursor: pointer;
+				}
 			}
 		}
 	}
