--- a/web/src/app/pages/Page404/Page404.scss
+++ b/web/src/app/pages/Page404/Page404.scss
@@ -10,7 +10,7 @@
 		justify-content: center;
 		align-content: center;
 		flex-grow: 4;
-		background: var(--page404-bg-color);
+		background: #f0fcff;
 	}
 	&__text {
 		display: flex;
