--- a/web/src/app/components/Header/Header.scss
+++ b/web/src/app/components/Header/Header.scss
@@ -6,7 +6,7 @@
 	z-index: 50;
 	width: 100%;
 	height: 60px;
-	background-color: hsl(192, 98%, 95%);
+	background-color: var(--Dark-bg-dark);
 	overflow-x: hidden;
 	&__wrapper {
 		height: 60px;
@@ -18,23 +18,31 @@
 		overflow-x: hidden;
 	}
 	&__burger {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		height: 100%;
 		cursor: pointer;
 		padding: 0 10px;
 		margin-right: auto;
 		&:hover {
-			background: #cdf1f8;
+			background: var(--Dark-bg-dark-hover);
+		}
+		svg {
+			width: 36px;
+			height: 36px;
+			path {
+				stroke: var(--Dark-font-color);
+			}
 		}
 	}
 
 	&__logo {
 		display: none;
-
 		justify-content: center;
 		align-items: center;
 		padding: 0px 10px;
 		text-decoration: none;
-		color: #000;
 		font-size: 20px;
 		font-weight: 600;
 		margin-right: auto;
@@ -43,8 +51,9 @@
 		img {
 			padding-right: 8px;
 		}
+		color: var(--Dark-font-color);
 		&:hover {
-			background: #cdf1f8;
+			background: var(--Dark-bg-dark-hover);
 		}
 	}
 
@@ -57,18 +66,95 @@
 			height: 100%;
 			li {
 				height: 100%;
+				padding: 0px 5px;
+				svg {
+					g {
+						fill: var(--Dark-font-color);
+					}
+				}
 				img {
 					height: 100%;
 					padding: 4px 10px;
 				}
 				&:hover {
-					background: #cdf1f8;
+					background: (--Dark-bg-dark-hover);
 				}
 				cursor: pointer;
 			}
 		}
 	}
 	&-light {
+		background-color: var(--Light-bg-dark);
+		.header__wrapper .header {
+			&__burger {
+				&:hover {
+					background: var(--Light-bg-dark-hover);
+				}
+				svg {
+					path {
+						stroke: var(--Light-font-color);
+					}
+				}
+			}
+			&__logo {
+				color: var(--Light-font-color);
+
+				&:hover {
+					background: var(--Light-bg-dark-hover);
+				}
+			}
+
+			&__nav {
+				ul {
+					li {
+						&:hover {
+							background: var(--Light-bg-dark-hover);
+						}
+					}
+					svg {
+						g {
+							fill: var(--Light-font-color);
+						}
+					}
+				}
+			}
+		}
+	}
+	&-dark {
+		background-color: var(--Dark-bg-dark);
+		.header__wrapper .header {
+			&__burger {
+				&:hover {
+					background: var(--Dark-bg-dark-hover);
+				}
+				svg {
+					path {
+						stroke: var(--Dark-font-color);
+					}
+				}
+			}
+			&__logo {
+				color: var(--Dark-font-color);
+				&:hover {
+					background: var(--Dark-bg-dark-hover);
+				}
+			}
+
+			&__nav {
+				ul {
+					li {
+						svg {
+							g {
+								fill: var(--Dark-font-color);
+							}
+						}
+						&:hover {
+							background: var(--Dark-bg-dark-hover);
+						}
+					}
+				}
+			}
+		}
 	}
 }
 
