--- a/web/src/app/components/Timer/Timer.scss
+++ b/web/src/app/components/Timer/Timer.scss
@@ -58,7 +58,7 @@
 
 		&-button {
 			cursor: pointer;
-			background: #0083ff;
+			background: var(--Light-button-bg);
 			width: 80px;
 			height: 80px;
 			border-radius: 50%;
@@ -74,14 +74,65 @@
 
 	&-dark {
 		background: var(--Dark-bg-white);
-		&__time {
-			color: var(--Dark-font-color);
-			&:hover {
+		.timer__wrapper {
+			.timer__time {
+				color: var(--Dark-font-color);
+				&:hover {
+					background-color: var(--Dark-bg-white-hover);
+				}
+			}
+			.timer__buttons {
+				&-button {
+					background: var(--Dark-button-bg);
+					&:hover {
+						background: var(--Dark-button-bg-hover);
+						svg {
+							path {
+								fill: var(--Dark-button-color-hover);
+								stroke: var(--Dark-button-color-hover);
+							}
+						}
+					}
+					svg {
+						path {
+							fill: var(--Dark-button-color);
+							stroke: var(--Dark-button-color);
+						}
+					}
+				}
 			}
 		}
 	}
+
 	&-light {
 		background: var(--Light-bg-white);
-		background-color: var(--Dark-bg-white-hover);
+		.timer__wrapper {
+			.timer__time {
+				color: var(--Light-font-color);
+				&:hover {
+					background-color: var(--Light-bg-white-hover);
+				}
+			}
+			.timer__buttons {
+				&-button {
+					background: var(--Light-button-bg);
+					&:hover {
+						background: var(--Light-button-bg-hover);
+						svg {
+							path {
+								fill: var(--Light-button-color-hover);
+								stroke: var(--Light-button-color-hover);
+							}
+						}
+					}
+					svg {
+						path {
+							fill: var(--Light-button-color);
+							stroke: var(--Light-button-color);
+						}
+					}
+				}
+			}
+		}
 	}
 }
