--- a/web/src/app/components/Burger/Burger.scss
+++ b/web/src/app/components/Burger/Burger.scss
@@ -16,42 +16,12 @@
 		overflow: hidden;
 		cursor: pointer;
 		&:hover {
-			background: rgba($color: #000000, $alpha: 0.2);
+			background: rgba($color: #fff, $alpha: 0.03);
 		}
 	}
 	&__main {
 		z-index: 1000;
 
-		&-light {
-			background-color: var(--Light-bg-white);
-			font-size: 30px;
-			ul {
-				li {
-					a {
-						color: var(--Light-font-color);
-						text-decoration: none;
-					}
-					&:hover {
-						background-color: var(--Light-bg-white-hover);
-					}
-				}
-			}
-		}
-		&-dark {
-			background-color: var(--Dark-bg-dark);
-			font-size: 30px;
-			ul {
-				li {
-					a {
-						color: var(--Dark-font-color);
-						text-decoration: none;
-					}
-					&:hover {
-						background-color: var(--Dark-bg-dark-hover);
-					}
-				}
-			}
-		}
 		background-color: var(--Dark-bg-dark);
 		height: 100%;
 		width: 70%;
@@ -69,6 +39,50 @@
 					width: 100%;
 					padding: 4px 10px;
 					cursor: pointer;
+				}
+			}
+		}
+	}
+	&-light {
+		.burger__bg {
+			&:hover {
+				background: rgba($color: #000000, $alpha: 0.2);
+			}
+		}
+		.burger__main {
+			background-color: var(--Light-bg-white);
+			font-size: 30px;
+			ul {
+				li {
+					a {
+						color: var(--Light-font-color);
+						text-decoration: none;
+					}
+					&:hover {
+						background-color: var(--Light-bg-white-hover);
+					}
+				}
+			}
+		}
+	}
+	&-dark {
+		.burger__bg {
+			&:hover {
+				background: rgba($color: #fff, $alpha: 0.03);
+			}
+		}
+		.burger__main {
+			background-color: var(--Dark-bg-dark);
+			font-size: 30px;
+			ul {
+				li {
+					a {
+						color: var(--Dark-font-color);
+						text-decoration: none;
+					}
+					&:hover {
+						background-color: var(--Dark-bg-dark-hover);
+					}
 				}
 			}
 		}
