--- a/web/src/app/components/Timer/Timer.scss
+++ b/web/src/app/components/Timer/Timer.scss
@@ -6,6 +6,7 @@
 	width: 100%;
 	overflow: hidden;
 	flex-grow: 1;
+	padding: 20px 0px;
 	background: var(--Dark-bg-white);
 	&__wrapper {
 		display: flex;
