--- a/web/src/app/components/ToggleTheme/ToggleTheme.scss
+++ b/web/src/app/components/ToggleTheme/ToggleTheme.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	min-width: 120px;
+	min-width: 60px;
 	padding: 6px;
 	max-width: 200px;
 	cursor: pointer;
@@ -10,8 +10,7 @@
 		background-color: #cdf1f8;
 	}
 	svg {
-		height: 40px;
-		width: 40px;
+		display: none;
 	}
 	input[type='checkbox'] {
 		-webkit-appearance: none;
@@ -70,6 +69,26 @@
 	&-dark {
 		&:hover {
 			background-color: var(--Dark-bg-dark-hover);
+		}
+	}
+}
+@media (min-width: 320px) {
+	.toggleTheme {
+		min-width: 80px;
+		svg {
+			display: block;
+			height: 30px;
+			width: 30px;
+		}
+	}
+}
+@media (min-width: 400px) {
+	.toggleTheme {
+		min-width: 100px;
+
+		svg {
+			height: 40px;
+			width: 40px;
 		}
 	}
 }
