--- a/web/src/app/components/Settings/Settings.scss
+++ b/web/src/app/components/Settings/Settings.scss
@@ -7,7 +7,7 @@
 	width: 100%;
 	z-index: 100;
 	overflow-x: hidden;
-	background: rgba($color: #000000, $alpha: 0.7);
+	background: var(--Dark-bg-white);
 	&__bg {
 		position: absolute;
 		height: 100%;
@@ -16,12 +16,12 @@
 		overflow: hidden;
 		cursor: pointer;
 		&:hover {
-			background: rgba($color: #000000, $alpha: 0.2);
+			background: rgba($color: #fff, $alpha: 0.03);
 		}
 	}
 	&__main {
 		z-index: 1000;
-		background: #f0feff;
+		background: var(--Dark-bg-white);
 		height: 100%;
 		width: 100%;
 		position: fixed;
@@ -39,10 +39,10 @@
 		flex-direction: row;
 		font-size: 28px;
 		width: 100%;
-		background: rgba($color: #e6fafe, $alpha: 1);
-		color: #000000;
+		background: var(--Dark-bg-dark);
+		color: var(--Dark-font-color);
 		&:hover {
-			background: rgba($color: #e6fafe, $alpha: 1);
+			background: var(--Dark-bg-dark-hover);
 		}
 		padding: 20px;
 		cursor: pointer;
@@ -86,10 +86,10 @@
 			flex-direction: column;
 			width: 90px;
 			height: 90px;
-			color: #fff;
-			background: rgba($color: #0083ff, $alpha: 1);
+			color: var(--Dark-font-color);
+			background: var(--Dark-button-bg);
 			&:hover {
-				background: var(--Light-button-bg-hover);
+				background: var(--Dark-button-bg-hover);
 			}
 			border-radius: 6px;
 			cursor: pointer;
@@ -102,7 +102,7 @@
 				width: auto;
 				border: none;
 				font-size: 36px;
-				color: #fff;
+				color: var(--Dark-font-color);
 			}
 		}
 		&-time {
@@ -125,6 +125,8 @@
 		flex-direction: row;
 		min-height: 40px;
 		cursor: pointer;
+		color: var(--Dark-font-color);
+
 		&-input {
 			align-self: end;
 			text-align: end;
@@ -133,9 +135,10 @@
 			background-color: transparent;
 			font-size: 26px;
 			max-width: 80px;
+			color: var(--Dark-font-color);
 		}
 		&:hover {
-			background-color: #dbf9ff;
+			background-color: var(--Dark-button-bg-hover);
 		}
 		&-title {
 			font-size: 20px;
@@ -153,16 +156,21 @@
 		justify-content: start;
 		align-items: center;
 		flex-direction: row;
+		color: var(--Dark-font-color);
+
 		svg {
 			margin-left: auto;
 		}
 		&:hover {
-			background-color: #dbf9ff;
+			background-color: var(--Dark-button-bg-hover);
 		}
 		&-title {
 			font-size: 20px;
 			font-weight: normal;
 			max-width: 180px;
+		}
+		input {
+			color: var(--Dark-font-color);
 		}
 	}
 	&-light {
