add gulp typescriot

--- a/chrome-extension/src/scss/components/Settings/Settings.scss
+++ b/chrome-extension/src/scss/components/Settings/Settings.scss
@@ -59,6 +59,7 @@
 		justify-content: start;
 		align-items: flex-start;
 		width: 100%;
+		color: var(--Dark-font-color);
 		&-title {
 			font-size: 26px;
 			font-weight: 600;
