--- a/chrome-extension/src/scss/layout/layout.scss
+++ b/chrome-extension/src/scss/layout/layout.scss
@@ -4,6 +4,8 @@
 	list-style: none;
 	outline: none;
 	font-weight: normal;
+	// !important to fix bugs with fonts in browsers
+	font-family: var(--body-font) !important;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
