deleted gulp, added webpack

--- a/chrome-extension/src/scss/fonts/fonts.scss
+++ b/chrome-extension/src/scss/fonts/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'Inter';
-	src: url('fonts/Inter-Regular.ttf');
-	src: url('fonts/Inter-Regular.ttf') format('truetype');
+	src: url('src/fonts/Inter-Regular.ttf');
+	src: url('src/fonts/Inter-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
 	font-family: 'Inter';
-	src: url('fonts/Inter-SemiBold.ttf');
-	src: url('fonts/Inter-SemiBold.ttf') format('truetype');
+	src: url('src/fonts/Inter-SemiBold.ttf');
+	src: url('src/fonts/Inter-SemiBold.ttf') format('truetype');
 	font-weight: 600;
 	font-style: normal;
 	font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
 	font-family: 'Inter';
-	src: url('fonts/Inter-Bold.ttf');
-	src: url('fonts/Inter-Bold.ttf') format('truetype');
+	src: url('src/fonts/Inter-Bold.ttf');
+	src: url('src/fonts/Inter-Bold.ttf') format('truetype');
 	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
