delete chrome-extension folder

--- a/chrome-extension/src/scss/components/Settings/Settings.scss
+++ b/chrome-extension/src/scss/components/Settings/Settings.scss
@@ -232,7 +232,7 @@
 			&__break {
 				color: var(--Light-font-color);
 				&:hover {
-					background-color: var(--Light-button-bg-hover);
+					background-color: var(--Light-button-bg-hover2);
 				}
 				input {
 					color: var(--Light-font-color);
@@ -242,7 +242,7 @@
 			&__theme {
 				color: var(--Light-font-color);
 				&:hover {
-					background-color: var(--Light-button-bg-hover);
+					background-color: var(--Light-button-bg-hover2);
 				}
 				input {
 					color: var(--Light-font-color);
