--- a/chrome-extension/src/scss/config/variables.scss
+++ b/chrome-extension/src/scss/config/variables.scss
@@ -11,7 +11,8 @@
 	--Light-button-color-hover: #f7f7ff;
 	--Light-button-bg: #0083ff;
 	--Light-button-bg-hover: #258ef0;
-	/* Dark Theme */
+	--Light-button-bg-hover2: #e4ffff;
+
 	--Dark-bg-white: #1f1f1f;
 	--Dark-bg-white-hover: #2b2a2a;
 	--Dark-bg-dark: #171717;
