--- a/web/src/assets/styles/variables.scss
+++ b/web/src/assets/styles/variables.scss
@@ -1,11 +1,12 @@
 :root {
 	/* Light Theme */
+
+	--Light-font-color: #000;
+
 	--Light-bg-white: #f0feff;
 	--Light-bg-white-hover: #e7fbff;
 	--Light-bg-dark: #e6faff;
 	--Light-bg-dark-hover: #cdf1f8;
-
-	--Light-font-color: #000;
 
 	--Light-button-color: #fff;
 	--Light-button-color-hover: #f7f7ff;
@@ -13,12 +14,13 @@
 	--Light-button-bg-hover: #258ef0;
 	--Light-button-bg-hover2: #e4ffff;
 
+	/* Dark Theme */
+	--Dark-font-color: #e4e4e4;
+
 	--Dark-bg-white: #1f1f1f;
 	--Dark-bg-white-hover: #2b2a2a;
 	--Dark-bg-dark: #171717;
 	--Dark-bg-dark-hover: #1c1d1b;
-
-	--Dark-font-color: #e4e4e4;
 
 	--Dark-button-color: #a2c56b;
 	--Dark-button-color-hover: #9ecc53;
